# terraform-gcp-infra-example

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/cloud_functions/: __init__.py
src/cloud_functions/alerts/: __init__.py
src/cloud_functions/alerts/compute_engine_on/: __init__.py  main.py  requirements.txt
terraform/: bigquery_dataset.tf  bigquery_external_tables.tf  cloud_functions.tf  cloud_storage.tf  firestore.tf  logs_exclusions.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/schemas/: earnings_calendar_schema.json  investpy_news_economy_schema.json  top_k_articles_schema.json
tests/: __init__.py  conftest.py  pytest.ini  run_tests.py  test_cloud_functions.py
